src/test/deca/syntax/invalid/created/miscellaneous/only_cbrace.deca
// Description :
//    brace fermante en trop
//
// Resultats :
//		Syntaxe error

}
